# airscan

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  nixpacks.toml  pyproject.toml  railway.json  seed_policies.py  setup.cfg  worker.py
backend/app/: main.py
backend/app/api/: billing.py  cases.py  debug.py  findings.py  policy.py  upload.py  user.py
backend/app/core/: auth.py  config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  billing.py  case.py  policy.py  user.py
backend/app/schemas/: common.py
backend/app/services/: export.py  gemini.py  openai_analysis.py  policy_extract.py  storage.py  transcription.py
backend/app/worker/: jobs.py  queue.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/billing/: billing-client.tsx  page.tsx
frontend/src/app/(app)/cases/: cases-client.tsx  page.tsx
frontend/src/app/(app)/cases/[id]/: case-detail-client.tsx  page.tsx
frontend/src/app/(app)/dashboard/: dashboard-client.tsx  page.tsx
frontend/src/app/(app)/policy-library/: page.tsx
frontend/src/app/(app)/policy-library/[id]/: page.tsx
frontend/src/app/(app)/settings/: page.tsx
frontend/src/app/(app)/upload/: upload-client.tsx
frontend/src/components/: app-shell.tsx  auth-buttons.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  sheet.tsx  skeleton-loaders.tsx  table.tsx  textarea.tsx
frontend/src/lib/: api.ts  utils.ts
(+4 files in other folders)
